--- a/pom.xml
+++ b/pom.xml
@@ -14,6 +14,14 @@
         <servlet.specification.version>3.0.1</servlet.specification.version>
     </properties>
 
+    <repositories>
+        <repository>
+            <id>oss snapshot</id>
+            <name>oss snapshot</name>
+            <url>https://oss.sonatype.org/content/repositories/snapshots/</url>
+        </repository>
+    </repositories>
+
     <dependencies>
         <dependency>
             <groupId>com.github.toto-castaldi.services.restServer</groupId>
