--- a/crediental-site/bower.json
+++ b/crediental-site/bower.json
@@ -2,6 +2,7 @@
   "name": "crediental-site",
   "private": true,
   "dependencies": {
-    "bootstrap": "~3.2.0"
+    "bootstrap": "~3.2.0",
+    "jquery-validation": "~1.14.0"
   }
 }
