--- a/crediental-site/bower.json
+++ b/crediental-site/bower.json
@@ -3,6 +3,7 @@
   "private": true,
   "dependencies": {
     "bootstrap": "~3.2.0",
-    "jquery-validation": "~1.14.0"
+    "jquery-validation": "~1.14.0",
+    "notie": "*"
   }
 }
