--- a/config
+++ b/config
@@ -1,7 +1,7 @@
 {
-      protocol  : 'http',
-      host    : 'rest-resource.elasticbeanstalk.com',
-      port    : ':80',
-      context   : '/',
-      log     : true
+      "protocol"  : "http",
+      "host"    : "rest-resource.elasticbeanstalk.com",
+      "port"    : ":80",
+      "context"   : "/",
+      "log"     : true
 }
